# MyLabs

./: .gitignore  .gitignore.txt  CMakeLists.txt  gitpush.bat  win.bat
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  lab2_utils.cppm  main.cpp
lab3/: CMakeLists.txt  classes.cppm  lab3_utils.cppm  main.cpp
lab4/: CMakeLists.txt  classes.cppm  lab4_utils.cppm  main.cpp
lab5/: 1.txt  CMakeLists.txt  IgnoredWords.txt  lab5_utils.cppm  main.cpp  pg18857.txt
modules/: CMakeLists.txt  lab_utils.cppm
